compiler/fir/analysis-tests/testData/resolve/cfg/innerClassInAnonymousObject.kt
// !DUMP_CFG

val x = object {
    <!NESTED_CLASS_NOT_ALLOWED!>class Nested<!> {
        fun foo() {}
    }
}
